feat: implementa categroria de usuário administrador, configuração de role no JWT e adiciona migration com coluna is_admin e criação de usuário padrão